dataset1235/2025-2/610742602/users/1343319280/executions/677928262_48684178.log
== RUN (2025-08-26 21:23:21)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(rouad(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:28:38)
-- CODE: 
# Entrada
total_vendas = input("Total de vendas:")

lucro = float(total_vendas +(total_vendas * (30 / 100)))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(total_vendas +(total_vendas * (30 / 100)))
                                 ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(total_vendas +(total_vendas * (30 / 100)))
                                 ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(total_vendas +(total_vendas * (30 / 100)))
                                 ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(total_vendas +(total_vendas * (30 / 100)))
                                 ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(total_vendas +(total_vendas * (30 / 100)))
                                 ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(total_vendas +(total_vendas * (30 / 100)))
                                 ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:24:11)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:34:25)
-- CODE: 
# Entrada
n = input("Total de vendas:")

lucro = n * (30 / 100)

print(round(lucro , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:25:34)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas +(total_vendas * (30 / 100))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:25:33)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas +(total_vendas * (30 / 100))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:25:35)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas +(total_vendas * (30 / 100))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:27:58)
-- CODE: 
# Entrada
total_vendas = input("Total de vendas:")

lucro = total_vendas +(total_vendas * (30 / 100))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = total_vendas +(total_vendas * (30 / 100))
                           ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = total_vendas +(total_vendas * (30 / 100))
                           ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = total_vendas +(total_vendas * (30 / 100))
                           ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = total_vendas +(total_vendas * (30 / 100))
                           ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = total_vendas +(total_vendas * (30 / 100))
                           ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = total_vendas +(total_vendas * (30 / 100))
                           ~~~~~~~~~~~~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:38:30)
-- CODE: 
# Entrada
n = input("Total de vendas:")


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:18)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(rouad(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:40:35)
-- CODE: 
# Entrada
n = input("Total de vendas:")

lucro = (30/100) * n
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = (30/100) * n
            ~~~~~~~~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = (30/100) * n
            ~~~~~~~~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = (30/100) * n
            ~~~~~~~~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = (30/100) * n
            ~~~~~~~~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = (30/100) * n
            ~~~~~~~~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = (30/100) * n
            ~~~~~~~~~^~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:41:37)
-- CODE: 
# Entrada
n = float(input("Total de vendas:"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:35:19)
-- CODE: 
# Entrada
n = input("Total de vendas:")

lucro = float(n * (30 / 100))

print(round(lucro , 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(n * (30 / 100))
                  ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(n * (30 / 100))
                  ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(n * (30 / 100))
                  ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(n * (30 / 100))
                  ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(n * (30 / 100))
                  ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = float(n * (30 / 100))
                  ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:24:11)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:25:34)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas +(total_vendas * (30 / 100))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 21:43:42)
-- CODE: 
# Entrada
n = float(input("Total de vendas:"))

lucro = n * (30 / 100)

print (round(lucro, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
---- user output:
Total de vendas:435.86
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
---- user output:
Total de vendas:210.15
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
---- user output:
Total de vendas:60.0
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
---- user output:
Total de vendas:135.15
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
---- user output:
Total de vendas:165.31
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
---- user output:
Total de vendas:568.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:38:07)
-- CODE: 
# Entrada
n = input("Total de vendas:")

lucro = n * (30 / 100)

print(float(round(lucro , 2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    lucro = n * (30 / 100)
            ~~^~~~~~~~~~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:20:55)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(lucro)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:19)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(rouad(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:25:31)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas +(total_vendas * (30 / 100))

print(round(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:20)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(rouad(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:21:19)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(rouad(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:23:20)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(rouad(lucro, 2))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 21:20:56)
-- CODE: 
# Entrada
total_vendas = fload(input("Total de vendas:"))

lucro = total_vendas + (30 / 100)

print(lucro)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total_vendas = fload(input("Total de vendas:"))
                   ^^^^^
NameError: name 'fload' is not defined. Did you mean: 'float'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
